# gitLite-backend

./: .env.example  .gitignore  API_DOCUMENTATION.md  README.md  SUPABASE_RLS_SETUP.md  main.py  pyproject.toml  requirements.txt  vercel.json
api/: auth.py  config.py  database.py
api/models/: auth_schemas.py  branch_schemas.py  schemas.py
api/routers/: auth.py  branches.py  files.py  repositories.py
api/services/: auth_service.py  branch_service.py  file_service.py  repository_service.py
api/utils/: helpers.py
